web合入，加入公司简介、技术介绍

--- a/code/LaundryWeb/washTech.html
+++ b/code/LaundryWeb/washTech.html
@@ -56,42 +56,53 @@
      </div> 
     </div> 
    </div>  
-	<div id="picslider" class="wrapper_full">
-		<img class="main pc-show pad-show" src="img/广告横幅1.jpg"><img class="main mobile-show" src="img/广告横幅1.jpg">
-		<div class="slider_button">
-				<a href="javascript:"><img src="img/arrow_down.png"></a>
-		</div>
-	</div>
+
 	<div id="container_1" class="wrapper">
 		<div class="contain-inner">
 			<!--<h2>Title Goes Here</h2>-->
 			<div class="content">
 				<p class="para_1">
-				贵州省金州快客清洁服务有限公司是一家集干洗衣物、洗涤技术咨询培训，室内保洁及物业管理等多项服务为一体的O2O模式专业环保型清洁服务公司。
+			<strong>本公司自筹建以来，四处引进洗涤技术，经过反复的测试与实际操作后决定引进“君萍洗染”技术：</strong>
 				</p>
-				<p class="para_1">				公司管理机制完善，清洁作业采用专业清洗设备结合员工丰富的经验来进行工作流程；洗涤技术严格实行上岗前操作培训采用国内知名洗染技术及配方，让洗衣事故尽可能的减少，取得广大顾客的认可，凭着较高的洗涤、清洁质量和严格的管理制度，为众多企事业单位、酒店等提供优质的专业服务，特称之为“快客洗涤”。
+				<p class="para_1">				
+1、君萍化料品质一流，也是全国唯一，有安全标准洗涤，流程和去渍流程的傻瓜式洗涤化料，品种齐全，是集于洗涤、去渍、精洗、救治、染色、补色、皮革和奢侈品护理最全面的化料。
 				</p>
-				<p class="para_1">
-				<strong>公司概况：</strong>贵州省金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立，注册资金200万元，自有多名掌握较好的干洗技术的技术骨干和多名从事多年家政保洁的员工，经集中进行专业技术及道德的培训，我公司员工自身素质较好。
+				<p class="para_1">	
+2、君萍化料是唯一掌握全面安全救治的化料，即可以安全防止，也可以做救治服务。因为君萍化料有着十年数万件衣物救治技术经验，所以才可以安全防止，没有救治技术是谈不上安全的。
 				</p>
-				<p class="para_1">
-				<strong>企业文化：</strong>洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，队顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。
+				<p class="para_1">	
+3、亡羊补牢不如防患于未然，让没有技术的员工也会操作，也是可以传承的标准流程，不用专业培训，君萍洗染的老师可以教员工，员工可以教新员工，如果不会，看看流程表就会独立操作。
 				</p>
-				<p class="para_1">
-				<strong>公司产品：</strong>快客洗涤干洗加盟店、洗涤技术咨询与培训、洗涤设备销售、命名为“快客洗涤”的手机APP。
+				<p class="para_1">	
+4、加盟商就不会在为员工洗坏衣服或不懂技术而发愁了，有专业的区域技术总监培训，还有非常专业的售后服务人员。君萍化料及工艺经数以千计的人员测试是安全可行。
+				</p>
+				<p class="para_1">	
+5、君萍化料是安全、高效，防止事故，节约可以循环使用的环保化料。君萍化料永远站在衣物的流行时尚前线，因为全国各地有几十个技术总监在发现洗衣难题，不断上报总部，总部会及时的根据放映的问题给出应对的化料及工艺流程来完善行业问题：比如洗涤速度有优化洗涤工艺。
+				</p>
+				<p class="para_1">	
+6、羊毛真丝84烧伤有救治工艺、皮边衣物洗涤防止掉色也有高科技的化料、比如真丝洗涤发白问题我们更是轻松洗涤去油不发白等等洗涤行业的最强音都在君萍洗染。
+				</p>
+				<p class="para_1">	
+7、安全的洗涤化料，安全的洗涤技术，安全的去除污渍，君萍化料防止事故，帮你解决烦恼，远离困扰。高档衣物精洗，提高洗衣店的利润！去除各种顽渍，提高洗衣店的名誉！
 				</p>
 			</div>
 		</div>
 	</div>
-	<div id="container_2" class="wrapper">
-		<div class="contain-inner">
-			<div class="content">
-			<div class="pics">
-			<img class="pic pic-detail" src="img/addr.png">
+	
+	<div id="crosspart_1" class="wrapper_full bg-179dc5">
+		<div class="cross-inner color-white">
+			<p class="content fs20">
+君萍洗染救治销售的不只是化料，而是科学技术！<br></br>
+
+君萍化料凝聚了君萍洗染救治十年的研发成果。
+			</p>
+			<div class="info">
+
+				<span class="fs20">君萍洗染—您的洗衣指导专家！</span>
 			</div>
 		</div>
 	</div>
-	</div>
+
    <div id="footer"> 
    <div class="container"> 
     <div class="bottom"> 
