--- a/code/LaundryWeb/Index.html
+++ b/code/LaundryWeb/Index.html
@@ -39,7 +39,7 @@
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="#" class="js-no-menu no-menu">设备</a> 
-         <a href="#" class="js-no-menu no-menu">技术</a> 
+         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
          <a href="#" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
