--- a/code/LaundryWeb/joinUs.html
+++ b/code/LaundryWeb/joinUs.html
@@ -33,11 +33,11 @@
         <div class="clearfix">
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
-         <a href="http://www.huawei.com/cn/all-solutions/">设备</a> 
-         <a href="http://www.huawei.com/cn/services/index.htm">技术</a> 
-         <a href="http://www.huawei.com/cn/all-products/">加盟</a>
-         <a href="http://www.huawei.com/cn/all-products/">APP下载</a>  
-         <a href="/cn/index.htm#">联系我们</a>
+         <a href="#" class="js-no-menu no-menu">设备</a> 
+         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
+         <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
+         <a href="#" class="js-no-menu no-menu">APP下载</a>  
+         <a href="#" class="js-no-menu no-menu">联系我们</a>
         </div> 
 		</li> 
       </ul> 
