WEB合入APP下载页面，设备页面

--- a/code/LaundryWeb/CompanyInfo.html
+++ b/code/LaundryWeb/CompanyInfo.html
@@ -45,10 +45,10 @@
         <div class="clearfix">
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
-         <a href="#" class="js-no-menu no-menu">设备</a> 
-         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
+         <a href="Equipment.html" class="js-no-menu no-menu">设备</a> 
+         <a href="#" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
-         <a href="#" class="js-no-menu no-menu">APP下载</a>  
+         <a href="APPDownload.html" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
         </div> 
 		</li> 
