--- a/code/LaundryWeb/CompanyInfo.html
+++ b/code/LaundryWeb/CompanyInfo.html
@@ -17,10 +17,11 @@
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_main_comment.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_main_css.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_mobile.css" type="text/css" media="screen, project, print" />
-	
-	<script src="jwplayer/jwplayer.js"></script>
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/detail.js"></script>
+	<link rel="stylesheet" href="Assets/EBG/csscn/bootstrap.min.css">
+<link rel="stylesheet" href="Assets/EBG/csscn/main.css">
+<link rel="stylesheet" href="Assets/EBG/csscn/mobile.css">
 
     <!--[if lt IE 9]>
 	<script src="js/selectivizr-min.js"></script>
@@ -46,7 +47,7 @@
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="Equipment.html" class="js-no-menu no-menu">设备</a> 
-         <a href="#" class="js-no-menu no-menu">技术</a> 
+         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
          <a href="APPDownload.html" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
