--- a/code/LaundryWeb/Index.html
+++ b/code/LaundryWeb/Index.html
@@ -39,7 +39,7 @@
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="Equipment.html" class="js-no-menu no-menu">设备</a> 
-         <a href="#" class="js-no-menu no-menu">技术</a> 
+         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
          <a href="APPDownload.html" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
@@ -63,15 +63,7 @@
     <a href="/cn/index.htm#index-banner" data-slide="prev" class="left carousel-control" role="button"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> 
     <a href="/cn/index.htm#index-banner" data-slide="next" class="right carousel-control" role="button"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
    </div> 
-   <div class="container hidden"> 
-    <div id="breadcrumb_nav"> 
-     <ul> 
-      <li><a href="/cn/index.htm#">Home</a></li> 
-      <li><a href="/cn/index.htm#">Solutions</a></li> 
-      <li><a href="/cn/index.htm#" class="active">SingleRAN</a></li> 
-     </ul> 
-    </div> 
-   </div> 
+
    <div class="lt-img-rt-tx index--first-part" style="padding-bottom: 20px;"> 
     <div class="container"> 
     	<img src="./img/APP下载.png" />
@@ -99,16 +91,7 @@
         <a href="http://www.miitbeian.gov.cn/" target="_blank">贵A2-20044005号</a>
        </div> 
       </div> 
-      <div class="col-sm-12 col-md-5"> 
-       <div class="bottom_right"> 
-        <ul> 
-         <li><a href="http://www.huawei.com/cn/about-huawei/legal/index.htm">法律声明</a></li> 
-         <li><a href="http://www.huawei.com/cn/about-huawei/legal/index.htm#Privacy policy">隐私保护</a></li> 
-         <li><a href="http://www.huawei.com/cn/about-huawei/contact-us/index.htm">联系我们</a></li> 
-         <li><a href="http://www.huawei.com/cn/sitemap/index.htm">网站地图</a></li> 
-        </ul> 
-       </div> 
-      </div> 
+
      </div> 
     </div> 
     <!-- footer_outer END --> 
