--- a/code/LaundryWeb/joinUs.html
+++ b/code/LaundryWeb/joinUs.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html class="no-js" lang="" xmlns="http://www.w3.org/1999/xhtml">
-<head id="Head1"><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta charset="utf-8" />
+<head id="Head1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta charset="utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 
@@ -34,7 +36,7 @@
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="Equipment.html" class="js-no-menu no-menu">设备</a> 
-         <a href="#" class="js-no-menu no-menu">技术</a> 
+         <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
          <a href="APPDownload.html" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
