--- a/code/LaundryWeb/washTech.html
+++ b/code/LaundryWeb/washTech.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" type="text/css" href="style/reset_cn.css" />
     <link rel="stylesheet" type="text/css" href="style/common_cn.css" />
 	<link rel="stylesheet" type="text/css" href="style/case_detail_cn.css" />
-	  <script type="text/javascript" src="./cn/ucmf/websites/cn/sitenavigationfunctions.js" id="SSNavigationFunctionsScript"></script> 
-  <script type="text/javascript" src="./cn/ucmf/websites/cn/sitenavigation.js" id="SSNavigationScript"></script> 
-  <script type="text/javascript" src="./cn/ucmf/resources/wcm/sitestudio/wcm.toggle.js"></script> 
-  <script type="text/javascript" src="./cn/ucmf/resources/sitestudio/ssajax/ssajax.js"></script> 
+ 
   <title>快客洗涤</title> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/new_bootstrap_css.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/www_en_fancybox_css.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_main_comment.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_main_css.css" type="text/css" media="screen, project, print" /> 
   <link rel="stylesheet" href="./cn/ucmf/groups/public/documents/webasset/cn_mobile.css" type="text/css" media="screen, project, print" />
-	
-	<script src="jwplayer/jwplayer.js"></script>
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/detail.js"></script>
-
+	<link rel="stylesheet" href="Assets/EBG/csscn/bootstrap.min.css">
+<link rel="stylesheet" href="Assets/EBG/csscn/main.css">
+<link rel="stylesheet" href="Assets/EBG/csscn/mobile.css">
     <!--[if lt IE 9]>
 	<script src="js/selectivizr-min.js"></script>
       <script src="js/html5shiv.min.js"></script>
@@ -45,10 +42,10 @@
         <div class="clearfix">
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
          <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
-         <a href="#" class="js-no-menu no-menu">设备</a> 
+         <a href="Equipment.html" class="js-no-menu no-menu">设备</a> 
          <a href="washTech.html" class="js-no-menu no-menu">技术</a> 
          <a href="joinUs.html" class="js-no-menu no-menu">加盟</a>
-         <a href="#" class="js-no-menu no-menu">APP下载</a>  
+         <a href="APPDownload.html" class="js-no-menu no-menu">APP下载</a>  
          <a href="#" class="js-no-menu no-menu">联系我们</a>
         </div> 
 		</li> 
@@ -96,13 +93,12 @@
 
 君萍化料凝聚了君萍洗染救治十年的研发成果。
 			</p>
-			<div class="info">
+<!-- 			<div class="info">
 
 				<span class="fs20">君萍洗染—您的洗衣指导专家！</span>
-			</div>
+			</div> -->
 		</div>
 	</div>
-
    <div id="footer"> 
    <div class="container"> 
     <div class="bottom"> 
@@ -113,16 +109,7 @@
         <a href="http://www.miitbeian.gov.cn/" target="_blank">贵A2-20044005号</a>
        </div> 
       </div> 
-      <div class="col-sm-12 col-md-5"> 
-       <div class="bottom_right"> 
-        <ul> 
-         <li><a href="#">法律声明</a></li> 
-         <li><a href="#">隐私保护</a></li> 
-         <li><a href="#">联系我们</a></li> 
-         <li><a href="#">网站地图</a></li> 
-        </ul> 
-       </div> 
-      </div> 
+
      </div> 
     </div> 
     <!-- footer_outer END --> 
