--- a/code/LaundryWeb/Home/Tpl/Index/index.html
+++ b/code/LaundryWeb/Home/Tpl/Index/index.html
@@ -10,24 +10,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
-
-    <!-- CSS Global Compulsory-->
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/style.css" />
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/headers/header1.css" />
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/bootstrap/css/bootstrap-responsive.min.css" />
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/style_responsive.css" />
-    <link rel="shortcut icon" href="favicon.ico" />        
-    <!-- CSS Implementing Plugins -->    
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/flexslider/flexslider.css" type="text/css" media="screen" />    	
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/css/parallax-slider.css" type="text/css" />
-    <!-- CSS Theme -->    
-    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/themes/default.css" id="style_color" />
-   
+    <meta name="author" content="" />  
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
 
+<include file="./Home/Tpl/PublicTpl/css.html"/>
 <body>
  
 
@@ -36,7 +22,7 @@
     <div class="container"> 
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="index.html"><img id="logo-header" src="img/logo.png" alt="Quik" /></a>
+            <a href="index.html"><img id="logo-header" src="__PUBLIC__/Fuego/img/logo.png" alt="Quik" /></a>
         </div><!-- /logo -->        
                                     
         <!-- Menu -->       
@@ -81,13 +67,7 @@
 <!--=== End Header ===-->
 
 <!--=== Slider ===-->
-<script type="text/javascript" >
-$(function(){
-    $('#myCarousel').carousel({
-      interval: 100
-    });
-});
-</script>
+
 <div id="myCarousel" class="carousel slide"  >
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -96,9 +76,9 @@ $(function(){
   </ol>
   <!-- Carousel items -->
   <div class="carousel-inner">
-    <div class="active item"><img src="img/AD1.jpg" alt="" /></div>
-    <div class="item"><img src="img/AD2.jpg" alt="" /></div>
-    <div class="item"><img src="img/AD3.jpg" alt="" /></div>
+    <div class="active item"><img src="__PUBLIC__/Fuego/img/AD1.jpg" alt="" /></div>
+    <div class="item"><img src="__PUBLIC__/Fuego/img/AD2.jpg" alt="" /></div>
+    <div class="item"><img src="__PUBLIC__/Fuego/img/AD3.jpg" alt="" /></div>
   </div>
   <!-- Carousel nav -->
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
@@ -437,42 +417,17 @@ $(function(){
 <!--=== End Footer ===-->
 
 <!--=== Copyright ===-->
-<div class="copyright">
-	<div class="container">
-		<div class="row-fluid">
-			<div class="span8">						
-	            <p>Copyright &copy; 2014.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-			</div>
-			<div class="span4">	
-				<a href="index.html"><img id="logo-footer" src="assets/img/logo2-default.png" class="pull-right" alt="" /></a>
-			</div>
-		</div><!--/row-fluid-->
-	</div><!--/container-->	
-</div><!--/copyright-->	
+<include file="./Home/Tpl/PublicTpl/copyright.html"/>
 <!--=== End Copyright ===-->
 
-<!-- JS Global Compulsory -->			
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/modernizr.custom.js"></script>		
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/bootstrap/js/bootstrap.min.js"></script>	
-<!-- JS Implementing Plugins -->           
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/flexslider/jquery.flexslider-min.js"></script>
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/modernizr.js"></script>
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/jquery.cslider.js"></script> 
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/back-to-top.js"></script>
-<!-- JS Page Level -->           
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/app.js"></script>
-<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/pages/index.js"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-      	App.init();
-        App.initSliders();
-        Index.initParallaxSlider();
+<include file="./Home/Tpl/PublicTpl/js.html"/>
+<script type="text/javascript" >
+$(function(){
+    $('#myCarousel').carousel({
+      interval: 3000
     });
+});
 </script>
-<!--[if lt IE 9]>
-    <script src="assets/js/respond.js"></script>
-<![endif]-->
-<div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
+
 </body>
 </html>	
