WEB完成顶栏页面跳转

--- a/code/LaundryWeb/Home/Tpl/Index/joinUs.html
+++ b/code/LaundryWeb/Home/Tpl/Index/joinUs.html
@@ -35,30 +35,28 @@
                 </a><!-- /nav-collapse -->                                  
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
-                        <li class="active">
-                            <a href="#" >首页</a>                      
+                        <li >
+                            <a href="__URL__/index.html" >首页</a>                      
                         </li>
                         <li >
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="#" >设备</a>                      
+                            <a href="__URL__/equipment.html" >设备</a>                      
                         </li>
 						<li >
-                            <a href="#" >技术</a>                      
+                            <a href="__URL__/washTech.html" >技术</a>                      
+                        </li>
+						<li class="active">
+                            <a href="__URL__/joinUs.html" >加盟</a>                      
                         </li>
 						<li >
-                            <a href="#" >加盟</a>                      
+                            <a href="__URL__/APPDownload.html" >APP下载</a>                      
                         </li>
 						<li >
-                            <a href="#" >APP下载</a>                      
-                        </li>
-						<li >
-                            <a href="#" >联系我们</a>                      
-                        </li>						
-                           
+                            <a href="__URL__/contactUs.html" >联系我们</a>                      
+                        </li>						 
                     </ul>
-
                 </div><!-- /nav-collapse -->                                
             </div><!-- /navbar-inner -->
         </div><!-- /navbar -->                          
