完成首页、设备、APP下载页面

--- a/code/LaundryWeb/Home/Tpl/PublicTpl/js.html
+++ b/code/LaundryWeb/Home/Tpl/PublicTpl/js.html
@@ -4,6 +4,8 @@
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/bootstrap/js/bootstrap.min.js"></script>	
 <!-- JS Implementing Plugins -->           
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/flexslider/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/bxslider/jquery.bxslider.js"></script>
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/jquery.cslider.js"></script> 
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/back-to-top.js"></script>
