--- a/code/LaundryWeb/Home/Tpl/Index/equipment.html
+++ b/code/LaundryWeb/Home/Tpl/Index/equipment.html
@@ -5,18 +5,14 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
     <title>快客洗涤</title>
-
     <!-- Meta -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <meta name="author" content="" />  
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
-
-<include file="./Home/Tpl/PublicTpl/css.html"/>
+    <meta name="author" content="" />
+    <include file="./Home/Tpl/PublicTpl/css.html"/>  
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
 <body>
- 
-
 <!--=== Header ===-->
 <div class="header" style="margin-top:20px;">               
     <div class="container"> 
@@ -64,51 +60,235 @@
     </div><!-- /container -->               
 </div><!--/header -->      
 <!--=== End Header ===-->
+<!--=== Breadcrumbs ===-->
+<div class="breadcrumbs margin-bottom-10">
+	<div class="container">
+        <h1 class="color-green pull-left">快客洗涤设备展示</h1>
+        <ul class="pull-right breadcrumb">
+            <li><a href="index.html"></a> <span class="divider">/</span></li>
+            <li class="active"></li>
+        </ul>
+    </div><!--/container-->
+</div><!--/breadcrumbs-->
+<!--=== End Breadcrumbs ===-->
 <div class="container">	
 <!--=== Slider ===-->
-<div class="headline"><h3>Recent Works</h3></div>
+	<div class="headline"><h3>干洗机设备系列</h3></div>
     <ul class="thumbnails">
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/2.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">Our Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
+                <p></p>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/3.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/P系列第五代干洗机.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">One More Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">P系列第五代干洗机</a></h3>
+                <p></p>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/9.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">Another Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
+                <p></p>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/10.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">Huge Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
+                <p></p>
             </div>
         </li>
     </ul>
+    <div class="headline"><h3>水洗机设备系列</h3></div>
+    <ul class="thumbnails">
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>					
+                </div>
+                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
+                <p></p>
+            </div>
+        </li>
+    </ul>
+    <div class="headline"><h3>烘干机设备系列</h3></div>
+    <ul class="thumbnails">
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/2000Z(DQ)烘干机.jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">2000Z(DQ)烘干机</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/700DQ烘干机.jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">700DQ烘干机</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>					
+                </div>
+                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
+                <p></p>
+            </div>
+        </li>
+    </ul>
+    <div class="headline"><h3>水洗车间设备系列</h3></div>
+    <ul class="thumbnails">
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/100公斤型烘干机.jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">100公斤型烘干机</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/100公斤型洗脱机.jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">100公斤型洗脱机</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/辊式烫平机（三辊）.jpg" alt="" /></div>				
+                </div>
+                <h3><a class="hover-effect" href="#">辊式烫平机（三辊）</a></h3>
+                <p></p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/自动型折叠机.jpg" alt="" /></div>					
+                </div>
+                <h3><a class="hover-effect" href="#">自动型折叠机</a></h3>
+                <p></p>
+            </div>
+        </li>
+    </ul>
+	<!-- Recent Works -->
+    <div class="headline"><h3>辅助设备系列</h3></div>
+    <div class="row-fluid margin-bottom-40">
+        <ul id="list" class="bxslider recent-work">
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/ZRD-Z(D)人像机.jpg" alt="" /></em>
+                    <span>
+                        <strong>ZRD-Z(D)人像机</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/YB-1衣物包装机.jpg" alt="" /></em>
+                    <span>
+                        <strong>YB-1衣物包装机</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/XGF-Q-Z吸鼓风烫台.jpg" alt="" /></em>
+                    <span>
+                        <strong>XGF-Q-Z吸鼓风烫台</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/QZT-B(C)去渍台.jpg" alt="" /></em>
+                    <span>
+                        <strong>QZT-B(C)去渍台</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/LYX-600衣物消毒柜.jpg" alt="" /></em>
+                    <span>
+                        <strong>LYX-600衣物消毒柜</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/DZF-蒸汽发生器.jpg" alt="" /></em>
+                    <span>
+                        <strong>DZF-蒸汽发生器</strong>
+                        <i></i>
+                    </span>
+                </a>
+            </li>
+        </ul>        
+	</div><!--/row-->
 </div>
 <!--=== End Footer ===-->
 <!--=== Copyright ===-->
@@ -116,13 +296,13 @@
 <!--=== End Copyright ===-->
 
 <include file="./Home/Tpl/PublicTpl/js.html"/>
-<script type="text/javascript" >
-$(function(){
-    $('#myCarousel').carousel({
-      interval: 3000
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        App.init();
+        App.initSliders();
+        App.initBxSlider1();
+        Index.initParallaxSlider();
     });
-});
 </script>
-
 </body>
 </html>	
