--- a/code/LaundryWeb/Home/Tpl/PublicTpl/css.html
+++ b/code/LaundryWeb/Home/Tpl/PublicTpl/css.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/headers/header1.css" />
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/bootstrap/css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/style_responsive.css" />
-       
+    <link rel="shortcut icon" href="__PUBLIC__/Fuego/img/favicon.ico" />    
     <!-- CSS Implementing Plugins -->    
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/plugins/fancybox/source/jquery.fancybox.css" /> 
+    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/bxslider/jquery.bxslider.css" />
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/flexslider/flexslider.css" type="text/css" media="screen" />    	
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/css/parallax-slider.css" type="text/css" />
     <!-- CSS Theme -->    
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/themes/default.css" id="style_color" />
-    
-   <link rel="shortcut icon" href="__PUBLIC__/Fuego/img/favicon.ico" /> 
+    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/themes/headers/default.css" id="style_color-header-1" /> 
