--- a/code/LaundryWeb/Home/Tpl/Index/washTech.html
+++ b/code/LaundryWeb/Home/Tpl/Index/washTech.html
@@ -73,112 +73,100 @@
 <!--=== End Breadcrumbs ===-->
 <!--=== Content Part ===-->
 <div class="container portfolio-item"> 	
-	<div class="row-fluid margin-bottom-20"> 
-		<!-- Carousel -->
-        <div class="span7">
-            <div id="myCarousel" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="assets/img/carousel/5.jpg" alt="" />
-                        <div class="carousel-caption">
-                            <h4>First Thumbnail label</h4>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/carousel/4.jpg" alt="" />
-                        <div class="carousel-caption">
-                            <h4>Second Thumbnail label</h4>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/carousel/3.jpg" alt="" />
-                        <div class="carousel-caption">
-                            <h4>Third Thumbnail label</h4>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-arrow">
-                    <a data-slide="prev" href="#myCarousel" class="left carousel-control"><i class="icon-angle-left"></i></a>
-                    <a data-slide="next" href="#myCarousel" class="right carousel-control"><i class="icon-angle-right"></i></a>
-                </div>
-            </div>
-        </div><!--/span7-->
-        <!-- //End Tabs and Carousel -->
-        
-        <div class="span5">
-        	<h3>Portfolio Item Information</h3>
-            <p>At vero eos et accusamus et iusto odio dignissimos <a href="#">ducimus qui blanditiis</a> praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum Fusce condimentum eleifend enim a feugiat. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus.</p>
-            <p>Molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus.</p>
-            <ul class="unstyled">
-            	<li><i class="icon-user color-green"></i> Jack Baur</li>
-            	<li><i class="icon-calendar color-green"></i> 14,2003 February</li>
-            	<li><i class="icon-tags color-green"></i> Websites, Google, HTML5/CSS3</li>
-            </ul>
-            <p><a class="btn-u btn-u-large" href="#">VISIT THE PROJECT</a></p>
-        </div>
+        <!-- Blockquote Options -->
+        <div class="row-fluid">
+            <blockquote>
+                <h3 class="color-green">本公司自筹建以来，四处引进洗涤技术，经过反复的测试与实际操作后决定引进“君萍洗染”技术</h3>
+                <p>君萍化料品质一流，也是全国唯一，有安全标准洗涤，流程和去渍流程的傻瓜式洗涤化料，品种齐全，是集于洗涤、去渍、精洗、救治、染色、补色、皮革和奢侈品护理最全面的化料。</p>
+            </blockquote>                    
+            <blockquote>
+                <p>君萍化料是唯一掌握全面安全救治的化料，即可以安全防止，也可以做救治服务。因为君萍化料有着十年数万件衣物救治技术经验，所以才可以安全防止，没有救治技术是谈不上安全的。</p>
+            </blockquote>   
+             <blockquote>
+                <p>亡羊补牢不如防患于未然，让没有技术的员工也会操作，也是可以传承的标准流程，不用专业培训，君萍洗染的老师可以教员工，员工可以教新员工，如果不会，看看流程表就会独立操作。</p>
+            </blockquote>    
+             <blockquote>
+                <p>加盟商就不会在为员工洗坏衣服或不懂技术而发愁了，有专业的区域技术总监培训，还有非常专业的售后服务人员。君萍化料及工艺经数以千计的人员测试是安全可行。</p>
+            </blockquote> 
+            <blockquote>
+                <p>君萍化料是安全、高效，防止事故，节约可以循环使用的环保化料。
+君萍化料永远站在衣物的流行时尚前线，因为全国各地有几十个技术总监在发现洗衣难题，不断上报总部，总部会及时的根据放映的问题给出应对的化料及工艺流程来完善行业问题：比如洗涤速度有优化洗涤工艺。
+</p>
+            </blockquote> 
+            <blockquote>
+                <p>羊毛真丝84烧伤有救治工艺、皮边衣物洗涤防止掉色也有高科技的化料、比如真丝洗涤发白问题我们更是轻松洗涤去油不发白等等洗涤行业的最强音都在君萍洗染……</p>
+            </blockquote>               
+            <blockquote class="margin-bottom-50">
+
+                <p>安全的洗涤化料，安全的洗涤技术，安全的去除污渍，君萍化料防止事故，帮你解决烦恼，远离困扰。
+高档衣物精洗，提高洗衣店的利润！
+去除各种顽渍，提高洗衣店的名誉！
+</p>
+            </blockquote>
+                             
+        </div><!--/row-fluid-->
     </div><!--/row-fluid-->
     </div>
 <div class="container">
 	<!-- Recent Works -->
-    <div class="headline"><h3>辅助设备系列</h3></div>
+    <div class="headline"><h3>君萍化料系列</h3></div>
     <div class="row-fluid margin-bottom-40">
         <ul id="list" class="bxslider recent-work">
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/ZRD-Z(D)人像机.jpg" alt="" /></em>
-                    <span>
-                        <strong>ZRD-Z(D)人像机</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_1.jpg" alt="" /></em>
                 </a>
             </li>
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/YB-1衣物包装机.jpg" alt="" /></em>
-                    <span>
-                        <strong>YB-1衣物包装机</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_2.jpg" alt="" /></em>
                 </a>
             </li>
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/XGF-Q-Z吸鼓风烫台.jpg" alt="" /></em>
-                    <span>
-                        <strong>XGF-Q-Z吸鼓风烫台</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_3.jpg" alt="" /></em>
                 </a>
             </li>
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/QZT-B(C)去渍台.jpg" alt="" /></em>
-                    <span>
-                        <strong>QZT-B(C)去渍台</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_4.jpg" alt="" /></em>
                 </a>
             </li>
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/LYX-600衣物消毒柜.jpg" alt="" /></em>
-                    <span>
-                        <strong>LYX-600衣物消毒柜</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_5.jpg" alt="" /></em>
                 </a>
             </li>
             <li>
                 <a href="#">
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/DZF-蒸汽发生器.jpg" alt="" /></em>
-                    <span>
-                        <strong>DZF-蒸汽发生器</strong>
-                        <i></i>
-                    </span>
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_6.jpg" alt="" /></em>
                 </a>
+            </li>
+             <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_7.jpg" alt="" /></em>
+                </a>
+            </li>
+             <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_8.jpg" alt="" /></em>
+                </a>
+            </li>
+             <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_9.jpg" alt="" /></em>
+                </a>
+            </li>
+             <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_10.jpg" alt="" /></em>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_11.jpg" alt="" /></em>
+                </a>
+            </li>
             </li>
         </ul>        
 	</div><!--/row-->
