--- a/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
+++ b/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
@@ -28,7 +28,11 @@
         <!-- Menu -->       
         <div class="navbar">                                
             <div class="navbar-inner">                                  
-                                
+               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a><!-- /nav-collapse -->                     
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
