更新网站Index页面

--- a/code/LaundryWeb/Home/Tpl/PublicTpl/css.html
+++ b/code/LaundryWeb/Home/Tpl/PublicTpl/css.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/fancybox/source/jquery.fancybox.css" /> 
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/bxslider/jquery.bxslider.css" />
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/flexslider/flexslider.css" type="text/css" media="screen" />    	
+    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/revolution_slider/css/rs-style.css" media="screen" />
+    <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/revolution_slider/rs-plugin/css/settings.css" media="screen" />  
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/css/parallax-slider.css" type="text/css" />
     <!-- CSS Theme -->    
     <link rel="stylesheet" href="__PUBLIC__/ThirdParty/chahua/css/themes/default.css" id="style_color" />
