--- a/code/LaundryWeb/Home/Tpl/PublicTpl/js.html
+++ b/code/LaundryWeb/Home/Tpl/PublicTpl/js.html
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/parallax-slider/js/jquery.cslider.js"></script> 
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/back-to-top.js"></script>
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/revolution_slider/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/plugins/revolution_slider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script> 
 <!-- JS Page Level -->           
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/app.js"></script>
 <script type="text/javascript" src="__PUBLIC__/ThirdParty/chahua/js/pages/index.js"></script>
