--- a/code/LaundryWeb/Home/Tpl/Index/washTech.html
+++ b/code/LaundryWeb/Home/Tpl/Index/washTech.html
@@ -60,52 +60,50 @@
     </div><!-- /container -->               
 </div><!--/header -->      
 <!--=== End Header ===-->
-<!--=== Breadcrumbs ===-->
-<div class="breadcrumbs margin-bottom-10">
-	<div class="container">
-        <h1 class="color-green pull-left">快客洗涤技术简介</h1>
-        <ul class="pull-right breadcrumb">
-            <li><a href="index.html"></a> <span class="divider">/</span></li>
-            <li class="active"></li>
-        </ul>
-    </div><!--/container-->
-</div><!--/breadcrumbs-->
-<!--=== End Breadcrumbs ===-->
-<!--=== Content Part ===-->
-<div class="container portfolio-item"> 	
-        <!-- Blockquote Options -->
-        <div class="row-fluid">
-            <blockquote>
-                <h3 class="color-green">本公司自筹建以来，四处引进洗涤技术，经过反复的测试与实际操作后决定引进“君萍洗染”技术</h3>
-                <p>君萍化料品质一流，也是全国唯一，有安全标准洗涤，流程和去渍流程的傻瓜式洗涤化料，品种齐全，是集于洗涤、去渍、精洗、救治、染色、补色、皮革和奢侈品护理最全面的化料。</p>
-            </blockquote>                    
-            <blockquote>
-                <p>君萍化料是唯一掌握全面安全救治的化料，即可以安全防止，也可以做救治服务。因为君萍化料有着十年数万件衣物救治技术经验，所以才可以安全防止，没有救治技术是谈不上安全的。</p>
-            </blockquote>   
-             <blockquote>
-                <p>亡羊补牢不如防患于未然，让没有技术的员工也会操作，也是可以传承的标准流程，不用专业培训，君萍洗染的老师可以教员工，员工可以教新员工，如果不会，看看流程表就会独立操作。</p>
-            </blockquote>    
-             <blockquote>
-                <p>加盟商就不会在为员工洗坏衣服或不懂技术而发愁了，有专业的区域技术总监培训，还有非常专业的售后服务人员。君萍化料及工艺经数以千计的人员测试是安全可行。</p>
-            </blockquote> 
-            <blockquote>
-                <p>君萍化料是安全、高效，防止事故，节约可以循环使用的环保化料。
-君萍化料永远站在衣物的流行时尚前线，因为全国各地有几十个技术总监在发现洗衣难题，不断上报总部，总部会及时的根据放映的问题给出应对的化料及工艺流程来完善行业问题：比如洗涤速度有优化洗涤工艺。
-</p>
-            </blockquote> 
-            <blockquote>
-                <p>羊毛真丝84烧伤有救治工艺、皮边衣物洗涤防止掉色也有高科技的化料、比如真丝洗涤发白问题我们更是轻松洗涤去油不发白等等洗涤行业的最强音都在君萍洗染……</p>
-            </blockquote>               
-            <blockquote class="margin-bottom-50">
 
-                <p>安全的洗涤化料，安全的洗涤技术，安全的去除污渍，君萍化料防止事故，帮你解决烦恼，远离困扰。
-高档衣物精洗，提高洗衣店的利润！
-去除各种顽渍，提高洗衣店的名誉！
-</p>
+<!--=== Content Part ===-->
+<div class="container">		
+	<div class="row-fluid">
+	 <!-- About Us -->
+            <div class="headline"><h3>快客洗涤技术简介</h3></div>
+            <p><img class="pull-left lft-img-margin img-width-200" src="__PUBLIC__/Fuego/img/tech/wash1.jpg" alt="" /></p>
+            <ul class="unstyled">
+            	<li><i class="icon-ok color-green"></i>君萍化料品质一流，也是全国唯一，有安全标准洗涤，流程和去渍流程的傻瓜式洗涤化料，品种齐全，是集于洗涤、去渍、精洗、救治、染色、补色、皮革和奢侈品护理最全面的化料。</li>
+            	<li><i class="icon-ok color-green"></i>君萍化料是唯一掌握全面安全救治的化料，即可以安全防止，也可以做救治服务。因为君萍化料有着十年数万件衣物救治技术经验，所以才可以安全防止，没有救治技术是谈不上安全的。</li>
+            	<li><i class="icon-ok color-green"></i>亡羊补牢不如防患于未然，让没有技术的员工也会操作，也是可以传承的标准流程，不用专业培训，君萍洗染的老师可以教员工，员工可以教新员工，如果不会，看看流程表就会独立操作。</li>
+            	<br /><li><i class="icon-ok color-green"></i>加盟商就不会在为员工洗坏衣服或不懂技术而发愁了，有专业的区域技术总监培训，还有非常专业的售后服务人员。君萍化料及工艺经数以千计的人员测试是安全可行。</li>
+           		<li><i class="icon-ok color-green"></i>君萍化料是安全、高效，防止事故，节约可以循环使用的环保化料。
+君萍化料永远站在衣物的流行时尚前线，因为全国各地有几十个技术总监在发现洗衣难题，不断上报总部，总部会及时的根据放映的问题给出应对的化料及工艺流程来完善行业问题：比如洗涤速度有优化洗涤工艺。
+</li>
+				<li><i class="icon-ok color-green"></i>羊毛真丝84烧伤有救治工艺、皮边衣物洗涤防止掉色也有高科技的化料、比如真丝洗涤发白问题我们更是轻松洗涤去油不发白等等洗涤行业的最强音都在君萍洗染……</li> 
+            </ul><br />
+
+    </div>
+
+	<div class="row-fluid">
+
+            <!-- Blockquotes -->
+            <blockquote class="hero-unify">
+                <h3 class="color-green">本公司自筹建以来，四处引进洗涤技术，经过反复的测试与实际操作后决定引进“君萍洗染”技术</h3>
+                <small>CEO, Mr Ma</small>
             </blockquote>
-                             
-        </div><!--/row-fluid-->
-    </div><!--/row-fluid-->
+	</div>
+</div>
+
+    <div class="container-fluid one-page">
+     <div class="one-page-inner one-green" style="height:100px important;">
+        <div class="container">
+            <div class="row-fluid">
+				<p class="lead">安全的洗涤化料，安全的洗涤技术，安全的去除污渍，君萍化料防止事故，帮你解决烦恼，远离困扰。</p>
+				<p class="lead">
+				高档衣物精洗，提高洗衣店的利润！
+				</p>
+				<p class="lead">
+				去除各种顽渍，提高洗衣店的名誉！
+				</p>
+            </div>
+        </div>
+    </div>
     </div>
 <div class="container">
 	<!-- Recent Works -->
@@ -167,7 +165,7 @@
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_11.jpg" alt="" /></em>
                 </a>
             </li>
-            </li>
+
         </ul>        
 	</div><!--/row-->
 </div>
